<h5>1.07 Beta 1           [2021-01-26]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.1
<hr>
- PHP8 cosmetics and updates (mamba)

<h5>1.06 Final           [2020-07-26]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.8
<hr>
- Final Release


<h5>1.06 RC1           [2019-02-11]</h5>  Dev: XOOPS 2.5.10, PHP 7.3.2
<hr>
- updates, cleanup (mamba)
- added image display to pages (mamba)

<h5>1.06 Beta 1           [2018-12-04]</h5>
<hr>
- namespaces (mamba)
- class autoloading (mamba)
- short array syntax (mamba)
- Yoda notation (mamba)
- started conversion to XMF (mamba)
    &nbsp;&nbsp;- updated addInfoBoxLine entries (mamba)
    &nbsp;&nbsp;- displayNavigation(basename(__FILE__))  (mamba)
    &nbsp;&nbsp;- changed to ->displayButton('left') (mamba)
WORK IN PROGRESS


<h5>1.05 RC-1           [2017-08-04]</h5>
<hr>
- changed _handler to Handler (mamba)
- added <{securityToken}> to about_admin_page.tpl (mamba)
- added SCANDIR_SORT_NONE to scandir() (mamba)


<h5>1.05 Beta 1   (Zyspec)        [2017-05-02]</h5>
<hr>
+ add XOOPS & PHP version check on install or upgrade
+ add usage of Xmf\Request in several places to filter input
+ add usage of Xmf\Module (Admin & Helper) to modernize code
+ add uninstall script to remove uploads directory on uninstall
+ add Utilities class for uninstall script
+ add Constants Interface class
+ add allow for http or https filenames
+ fixed references to js after it had been moved to /assets (see issue #5)
+ fixed reference to XoopsObjectTree->tree instead of _tree (see issue #10, XOOPS 0f14078 commit)
+ fixed so page cannot select itself, or a child of itself, as the parent page
+ fixed minor typo in .language/english/help/help.html
+ fixed template bugs preventing titles from being links where appropriate
+ moved loading of js and css to immediately after header(s) in index.php
- removed pass-by-reference for non-vars
- removed trailing '/' for html void elements
- renamed XoopsBlockForm to BlockForm class and moved file to ./class subdirectory