@@ -62,6 +62,7 @@ return (object)[
         '/sql/wflinks.sql',
         '/class/wfl_lists.php',
         '/class/class_thumbnail.php',
+        '/preloads/index.php',
         '/vcard.php',
     ],
     'oldFolders'      => [
