@@ -1,3 +1,8 @@
+<h5>1.7.0 Beta 2           [2022-02-20]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.27, PHP 8.0.16
+<hr>
+- index.html in /preloads (mamba)
+
+
 <h5>1.07 Beta 1           [2021-01-26]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.1
 <hr>
 - PHP8 cosmetics and updates (mamba)
